--- a/src/layout/__style__/layout.css
+++ b/src/layout/__style__/layout.css
@@ -4,7 +4,6 @@ html {
     width: 100%;
     height: 100%;
     position: relative;
-    overflow-x: hidden;
     color: var(--color-black);
     font-size: var(--font-size-small);
     line-height: 1.4;
